CMTL-6 Создано окно, реализующее интерфейс IView

--- a/ToDoListWForms/ToDoListWForms.csproj
+++ b/ToDoListWForms/ToDoListWForms.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToDoList.BL\ToDoList.BL.csproj" />
+    <ProjectReference Include="..\ToDoListPresenter\ToDoListPresenter.csproj" />
   </ItemGroup>
 
 </Project>
