--- a/ToDoListPresenter/ToDoListPresenter.csproj
+++ b/ToDoListPresenter/ToDoListPresenter.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MessageServices\MessageServices.csproj" />
     <ProjectReference Include="..\ToDoList.BL\ToDoList.BL.csproj" />
   </ItemGroup>
 
