--- a/ToDoList.BL/ToDoList.BL.csproj
+++ b/ToDoList.BL/ToDoList.BL.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\myStep\homework\ASP\21_09_12\ToDoListMVP2\ToDoList.BL\ToDoList.BL.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
