--- a/ToDoListPresenter/ToDoListPresenter.csproj
+++ b/ToDoListPresenter/ToDoListPresenter.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\myStep\homework\ASP\21_09_12\ToDoListMVP2\ToDoListPresenter\ToDoListPresenter.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\MessageServices\MessageServices.csproj" />
     <ProjectReference Include="..\ToDoList.BL\ToDoList.BL.csproj" />
